# MLArch

Assembler/: Assembler.py  Code.py  CompareContens.py  Parser.py  Retest.py  SymbolTable.py  signalUntils.py
Assembler/test/: PongL.hack  Rect.hack  Shift.asm  Shift.hack
Compiler/: Jackcompiler.py  README.md
Compiler/Assembler/: Assembler.py  Code.py  CompareContens.py  Parser.py  Retest.py  SymbolTable.py  signalUntils.py
Compiler/JackCompile/: CompilationEngine.py  CompileASTEngine.py  JackAnalyzer.py  JackTokenizer.py  StateMachine.py  SyntaxUntils.py  TokenAST.py  consts.py  symbol_table.py  vm_writer.py
Compiler/JackCompile/test/ArrayTest/: Main.xml  MainT.xml
Compiler/VMTranslator/: CodeWriter.py  CommandsTable.py  Parser.py  Translator.py
Compiler/VMTranslator/test/: BasicLoop.asm  BasicLoop.vm  BasicTest.asm  SimpleAdd.asm  SimpleFunction.asm  StackTest.asm  Sysfibo.asm  Sysfibo.vm  fiboMain.vm
Compiler/utils/: HackCommonUntils.py
DSA/: README.md
Deployment/: LLM.pptx
FrameWork/: ADline.py  PEP8Style.md  README.md
FrameWork/ComputeGraph/: TorchGraph.py
FrameWork/Differentation/: Backward.py  Forward.py  __init__.py
FrameWork/core/: Graph.py  Node.py  Variable.py  core.py
FrameWork/ops/: ops.py
MixInterface/: Pybindtest.py  README.md  example.cpp  hello.c  setup.py
MixInterface/CmakeTest/: CMakeLists.txt  MathFunction.cpp  Mulmain.cpp  README.md  TestSingle.cpp
MixInterface/CmakeTest/define/: CMakeLists.txt
MixInterface/CmakeTest/define/math/: CMakeLists.txt
Network/: __init__.py
Network/API/BootCamp/: AllStep.py  tensor.py
Network/Utils/: logger.py
